src/test/deca/context/invalid/created/test-a-5.deca
class A{
    int x;
    void setX(float a){
        x = a;
    }
}